--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
     
         <!-- Video Selection List -->
         <div class="video-list">
-            <button onclick="changeVideo('https://www.youtube.com/embed/3kr7FBr5I6k')">Video 1</button>
+            <button onclick="changeVideo('https://www.youtube.com/embed/3kr7FBr5I6k')">Skibidi</button>
             <button onclick="changeVideo('images/lol.mp4', true)">?????</button>
-            <button onclick="changeVideo('https://www.youtube.com/embed/fsZLz1jS2OM')">Video 3</button>
-            <button onclick="changeVideo('https://www.youtube.com/embed/cNIYvOpTsh8')">Video 4</button>
+            <button onclick="changeVideo('https://www.youtube.com/embed/fsZLz1jS2OM')">Toilet</button>
+            <button onclick="changeVideo('https://www.youtube.com/embed/cNIYvOpTsh8')">Ohio Rizz</button>
         </div>
         <script>
     function changeVideo(videoUrl, isLocal = false) {
